tests/baselines/reference/parserSkippedTokens9.errors.txt
==== tests/cases/compiler/parserSkippedTokens9.ts (2 errors) ====
    ; // existing trivia
    /*foo*/ \ /*bar*/
            ~
!!! parserSkippedTokens9.ts(2,9): error TS1001: Unexpected character "\".
            ~
!!! parserSkippedTokens9.ts(2,9): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.